[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rospkg-oe"
dynamic = ["version"]
description = "ROS package library"
readme = "README.md"
authors = [
    { name = "Ken Conley", email = "kwc@willowgarage.com" },
]
maintainers = [
    { name = "openEuler ROS SIG" },
]
keywords = [
    "ROS",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]
dependencies = [
    "catkin_pkg",
    "distro >= 1.4.0; python_version >= '3.8'",
    "PyYAML",
]

[project.optional-dependencies]
test = [
    "mock; python_version < '3.3'",
    "pytest",
]

[project.scripts]
rosversion = "rospkg.rosversion:main"

[project.urls]
Homepage = "http://wiki.ros.org/rospkg"
"Issue tracker" = "https://github.com/ros-infrastructure/rospkg/issues"
"Source code" = "https://github.com/ros-infrastructure/rospkg"

[tool.hatch.version]
path = "src/rospkg/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/rospkg",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/rospkg",
]
